force-app/main/default/objects/ImportProduct__c/ImportProduct__c.object-meta.xml
<CustomObject>
    <label>Import Product</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>Import Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>