force-app/main/default/objects/ImportProduct__c/fields/ArticleGroupName__c.field-meta.xml
<CustomField>
    <fullName>ArticleGroupName__c</fullName>
    <label>ArticleGroupName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>