force-app/main/default/objects/ImportProduct__c/fields/AvailabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityStatus__c</fullName>
    <label>AvailabilityStatus</label>
    <length>155</length>
    <type>Text</type>
</CustomField>