force-app/main/default/objects/ImportProduct__c/fields/EANCode__c.field-meta.xml
<CustomField>
    <fullName>EANCode__c</fullName>
    <externalId>true</externalId>
    <label>EANCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>