force-app/main/default/objects/ImportProduct__c/fields/EditionID__c.field-meta.xml
<CustomField>
    <fullName>EditionID__c</fullName>
    <label>EditionID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>