force-app/main/default/objects/ImportProduct__c/fields/EditionNo__c.field-meta.xml
<CustomField>
    <fullName>EditionNo__c</fullName>
    <label>EditionNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>