force-app/main/default/objects/ImportProduct__c/fields/EditionType__c.field-meta.xml
<CustomField>
    <fullName>EditionType__c</fullName>
    <label>EditionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>