force-app/main/default/objects/ImportProduct__c/fields/ImpressionID__c.field-meta.xml
<CustomField>
    <fullName>ImpressionID__c</fullName>
    <label>ImpressionID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>