force-app/main/default/objects/ImportProduct__c/fields/NetPrice__c.field-meta.xml
<CustomField>
    <fullName>NetPrice__c</fullName>
    <label>NetPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>