force-app/main/default/objects/ImportProduct__c/fields/PriceID__c.field-meta.xml
<CustomField>
    <fullName>PriceID__c</fullName>
    <label>PriceID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>