force-app/main/default/objects/ImportProduct__c/fields/ProjectNoEdition__c.field-meta.xml
<CustomField>
    <fullName>ProjectNoEdition__c</fullName>
    <label>ProjectNoEdition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>