force-app/main/default/objects/ImportProduct__c/fields/PublicationDate__c.field-meta.xml
<CustomField>
    <fullName>PublicationDate__c</fullName>
    <label>PublicationDate</label>
    <type>Date</type>
</CustomField>