force-app/main/default/objects/ImportProduct__c/fields/PublishingHouse__c.field-meta.xml
<CustomField>
    <fullName>PublishingHouse__c</fullName>
    <label>PublishingHouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>