force-app/main/default/objects/ImportProduct__c/fields/PublishingHouseDepartment__c.field-meta.xml
<CustomField>
    <fullName>PublishingHouseDepartment__c</fullName>
    <label>PublishingHouseDepartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>