force-app/main/default/objects/ImportProduct__c/fields/ShortTitle__c.field-meta.xml
<CustomField>
    <fullName>ShortTitle__c</fullName>
    <label>ShortTitle</label>
    <length>155</length>
    <type>Text</type>
</CustomField>