force-app/main/default/objects/ImportProduct__c/fields/TitleID__c.field-meta.xml
<CustomField>
    <fullName>TitleID__c</fullName>
    <label>Title ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>