force-app/main/default/objects/ImportProduct__c/fields/VATPrice__c.field-meta.xml
<CustomField>
    <fullName>VATPrice__c</fullName>
    <label>VATPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>